Implemented complete Room CRUD with Clean Architecture patterns
📋 Changes Made:
🏗️ Architecture & Dependencies
✅ Removed Entity Framework packages from API layer - Maintained Clean Architecture separation
✅ Updated Infrastructure EF packages to v9.0.5 - Ensured version consistency across projects
✅ Added missing project references - API now references Infrastructure for migrations
✅ Added Microsoft.EntityFrameworkCore.Design package - Enabled migration creation
🗄️ Database & Migrations
✅ Updated database connection string format - Standardized SQL Server connection
✅ Registered DbContext in Program.cs - Added proper DI registration
✅ Prepared for initial migration creation - Ready for Add-Migration InitialCreate
🔧 API Configuration
✅ Added CORS middleware - Resolved cross-origin request issues
✅ Registered AutoMapper with profiles - Enabled automatic profile discovery
✅ Added service registrations - RoomService, MapperService, ValidationService
📊 Room CRUD Implementation
✅ Created complete DTO layer - GetAllRoomsDTO, GetRoomDTO, CreateRoomDTO, UpdateRoomDTO
✅ Created complete ViewModel layer - GetAllRoomsViewModel, GetRoomViewModel, CreateRoomViewModel, UpdateRoomViewModel
✅ Added AutoMapper profiles - Complete mapping configuration between entities, DTOs, and ViewModels
✅ Implemented RoomService - Business logic with validation and mapping
✅ Created RoomController - REST API endpoints following established patterns
🔍 Validation & Error Handling
✅ Enhanced ValidationService - Added IsNotExist method for duplicate validation
✅ Implemented proper validation logic - Prevents duplicate rooms while allowing creation
✅ Used ErrorCode enum - Consistent error handling with proper error codes
🎯 API Endpoints
✅ GET /api/room - Retrieve all rooms
✅ GET /api/room/{id} - Retrieve room by ID
✅ POST /api/room - Create new room
✅ PUT /api/room/{id} - Update existing room
✅ DELETE /api/room/{id} - Delete room
🛠️ Technical Improvements
✅ Fixed validation logic - Corrected duplicate c

--- a/src/HotelBooking.Infrastructure/HotelBooking.Infrastructure.csproj
+++ b/src/HotelBooking.Infrastructure/HotelBooking.Infrastructure.csproj
@@ -1,13 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\HotelBooking.Application\HotelBooking.Application.csproj" />
+    <Compile Remove="Profiles\**" />
+    <EmbeddedResource Remove="Profiles\**" />
+    <None Remove="Profiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HotelBooking.Domain\HotelBooking.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5" />
+    <PackageReference Include="PredicateExtensions" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Profiles\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
