--- a/src/HotelBooking.Domain/HotelBooking.Domain.csproj
+++ b/src/HotelBooking.Domain/HotelBooking.Domain.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Models\DTOs\Room\" />
+    <Folder Include="Models\Profiles\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Models\ViewModels\Room\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
   </ItemGroup>
 
 </Project>
